fix bg colours and spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,7 +66,7 @@ video {
 
 @media (pointer: coarse) and (hover: none) {
  body {
-   background: url("../images/bg-mobile-fallback.jpg") #002E66 no-repeat center center scroll;
+   background: url("../images/bg-mobile-fallback.jpg") #586f56 no-repeat center center scroll;
    background-position: cover;
  }
  body video {
