--- a/app/assets/stylesheets/core/variables.scss
+++ b/app/assets/stylesheets/core/variables.scss
@@ -14,5 +14,11 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$primary: #002E66 !default;
-$secondary: #cd9557 !default;
+
+// https://www.color-hex.com/color-palette/38125
+$primary: 	#586f56 !default;
+// black but not super black
+$secondary: #191919 !default;
+
+// $primary: #002E66 !default;
+// $secondary: #cd9557 !default;
